--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "ecommorce",
+  "name": "Assiments",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@heroicons/react": "^1.0.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "autoprefixer": "^10.4.2",
+    "axios": "^1.9.0",
+    "framer-motion": "^5.6.0",
+    "postcss": "^8.4.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.30.0",
+    "react-scripts": "5.0.0",
+    "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8",
+    "tailwindcss": "^3.0.23",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
